// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> renders correctly 1`] = `
<button
  className=""
  type="button"
/>
`;

exports[`<Button> renders spinner correctly 1`] = `
<button
  className=""
  type="button"
>
  <span
    className=""
    style={
      Object {
        "height": 16,
        "width": 16,
      }
    }
  />
</button>
`;
